# sms

./: .env.bak  .gitignore  README.md  alembic.ini  assign_role.py  check_user_permissions.py  direct_add_permission.py  main.py  pyproject.toml  pytest.ini  reset_password.sql  simulate_login_final.py  simulate_login_flow.py  task.md  test.db
.cursor/: config.json  task-manager.json
.github/workflows/: ci-cd.yml
Backend/: .gitignore
Backend/sms-backend/: .env  .env.bak  .env.example  .gitignore  PyWhatKit_DB.txt  add_exam_notification_audit_permissions.py  add_manage_roles_permission.py  add_rbac_roles_permissions.py  add_view_dashboard_permission.py  alembic.ini  assign_superadmin_role.py  check_and_assign_roles.py  check_data.py  check_role.py  check_tenant.py  complete_rbac_setup.py  create_role.py  create_tenants_for_existing_users.py  debug_audit_logs.py  debug_middleware.py  direct_api_test.py  find_ids.py  fix_academic_year_name.py  fix_tenant_admin_roles.py  fix_tenant_domain.py  fix_timetable_reference.py  implementation_guide.md  main.py  migrate.py  populate_audit_logs.py  pyproject.toml  render.yaml  requirements.txt  revert_tenant_domain.py  simulate_login_final_fixed.py  simulate_login_flow_robust.py  temp_dump.py  test_outlook_email.py  test_user_email.py  update_tenant_localhost.py  (+1 more)
Frontend/: .gitignore
Frontend/sms-client/: .env.example  domainUrl.md  fix_cookies.js  fix_cookies.ps1  next.config.ts  (+4 more)
alembic/: env.py
docs/: tenant_session.md
scripts/: find_tenant_id.py  validate_configs.py
tests/: conftest.py  test_crud.py  test_services.py
(+983 files in other folders)
