[tool.poetry]
name = "multi-tenant-sms"
version = "0.1.0"
description = "A Multi-Tenant SMS"
authors = ["Zayzay J. Yennego <zyennego@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
pydantic          = {extras = ["email"], version = "^2.11.3"}
alembic           = "^1.11.1"
python-jose       = "^3.3.0"
passlib           = "^1.7.4"
python-multipart  = "^0.0.6"
pydantic-settings = "^2.9.1"
bcrypt = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest        = "^8.0.0"
pytest-cov    = "^4.0.0"
black         = "^23.1.0"
isort         = "^5.12.0"
mypy          = "^1.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
